Made configurations to the build.gradle file